--- a/css/default.css
+++ b/css/default.css
@@ -47,3 +47,30 @@ a {
 
 a:hover {
   color: #993300; }
+
+.form label {
+  padding: 4px;
+  padding-left: 14px;
+  color: #333333; }
+.form input {
+  font-size: 10px;
+  padding: 2px;
+  width: 250px; }
+.form input[type="checkbox"] {
+  width: 25px; }
+.form input[type="checkbox"] {
+  width: 25px; }
+.form .row {
+  margin-top: 5px; }
+.form .row.submit {
+  margin-top: 15px; }
+.form .errorSummary {
+  padding: 15px;
+  background-color: #c65b5b;
+  border: 1px solid #993300; }
+  .form .errorSummary p {
+    font-weight: bold; }
+  .form .errorSummary li {
+    list-style-type: square;
+    margin-left: 20px;
+    margin-top: 5px; }
