--- a/css/default.css
+++ b/css/default.css
@@ -21,6 +21,10 @@ h1 {
 
 .content {
   margin: 10px; }
+  .content p {
+    text-align: left;
+    margin-top: 5px;
+    margin-bottom: 5px; }
 
 .menu, .footer {
   width: 100%;
