--- a/css/default.scss
+++ b/css/default.scss
@@ -22,6 +22,12 @@ h1 {
     border-bottom:1px solid $lighter;
     margin-bottom:15px;
 }
+h2 {
+    font-size:110%;
+    font-weight:bold;
+    color:$highlight;
+    margin-bottom:10px;
+}
 
 
 .page {
@@ -95,6 +101,14 @@ a:hover {
     input[type="checkbox"] {
         width:25px;
     }
+    textarea {
+        width:250px;
+        padding:2px;
+        font-size:10px;
+        height:75px;
+    }
+
+
 
     .row {
         margin-top:5px;
@@ -126,6 +140,9 @@ a:hover {
 
 
 
+strong {
+    font-weight:bold;
+}
 
 
 
