--- a/css/default.css
+++ b/css/default.css
@@ -19,6 +19,12 @@ h2 {
   color: #993300;
   margin-bottom: 10px; }
 
+h3 {
+  font-size: 100%;
+  font-weight: bold;
+  color: #993300;
+  margin-bottom: 10px; }
+
 table#manage-users {
   width: 100%; }
   table#manage-users td {
@@ -36,6 +42,33 @@ table#manage-users {
   table#manage-users tbody tr:hover td:not(:first-child) {
     background-color: #dddddd;
     cursor: pointer; }
+
+.icons-small {
+  background: url(../gfx/icons-small.png) no-repeat top left;
+  margin: 4px; }
+
+.icons-small:hover {
+  background-image: url(../gfx/icons-small-orange.png); }
+
+.icon-small-edit {
+  background-position: 0 0;
+  width: 16px;
+  height: 16px; }
+
+.icon-small-plus {
+  background-position: 0 -21px;
+  width: 16px;
+  height: 16px; }
+
+.icon-small-trash {
+  background-position: 0 -42px;
+  width: 16px;
+  height: 16px; }
+
+.icon-small-users {
+  background-position: 0 -63px;
+  width: 16px;
+  height: 16px; }
 
 .page {
   width: 900px;
@@ -113,5 +146,29 @@ a:hover {
   border: 1px solid #993300;
   margin: 10px; }
 
+.dashboard .project {
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 10px;
+  min-height: 68px; }
+  .dashboard .project h3 {
+    font-size: 110%; }
+  .dashboard .project .subtitle {
+    margin: 3px 0px;
+    display: block; }
+  .dashboard .project .project-description {
+    margin-right: 50px;
+    margin-left: 10px;
+    font-size: 80%; }
+.dashboard .project:nth-child(2n) {
+  background-color: #dedede; }
+.dashboard .project:nth-child(2n+1) {
+  background-color: #e6e6e6; }
+.dashboard ul.actions {
+  float: right; }
+
 strong {
   font-weight: bold; }
+
+.float-left {
+  float: left; }
