--- a/css/default.css
+++ b/css/default.css
@@ -131,6 +131,8 @@ a:hover {
   height: 75px; }
 .form .row {
   margin-top: 5px; }
+  .form .row .attachment {
+    padding: 5px 0px; }
 .form .row.submit {
   margin-top: 15px; }
 .form .errorSummary {
@@ -204,8 +206,20 @@ strong {
 .float-right {
   float: right; }
 
+.clear-both {
+  clear: both; }
+
 .table-row {
   display: table-row; }
 
 .table-cell {
   display: table-cell; }
+
+.hidden {
+  display: none; }
+
+.cursor {
+  cursor: pointer; }
+
+.padding-left-medium {
+  padding-left: 10px; }
