--- a/css/default.scss
+++ b/css/default.scss
@@ -130,12 +130,17 @@ a:hover {
         padding:4px;
         padding-left:14px;
         color:$basic;
+        font-weight:bold;
     }
 
     input {
         font-size:10px;
         padding:2px;
         width:390px;
+    }
+    select {
+        margin:0px;
+        width:300px;
     }
     input[type="checkbox"] {
         width:25px;
@@ -150,6 +155,7 @@ a:hover {
         height:100px;
     }
     .row {
+        clear:both;
         margin-top:5px;
         .attachment {
             padding:5px 0px;
@@ -197,6 +203,13 @@ a:hover {
             margin-right:50px;
             margin-left:10px;
             font-size:80%;
+            h2 {
+                margin-top:10px;
+                margin-left:15px;
+            }
+            p {
+                margin-left:25px;
+            }
         }
         .entry-inline-info {
             display:table-row;
